--- a/README
+++ b/README
@@ -1,12 +1,8 @@
-POX is a networking software platform written in Python
-
-POX started life as an OpenFlow controller, but can now also function
-as an OpenFlow switch, and can be useful for writing networking software
-in general.
+<img src="http://img.blog.csdn.net/20160511113745542" width="720" height="470" />
 
 <img src="http://img.blog.csdn.net/20161101095806583" width="720" height="470" />
-'''
+
 ./pox.py  misc.nat --outside_port=eth0.1 --dpid=7 openflow.discovery forwarding.l2_pairs samples.pretty_log
 
 #指定连接外网的交换机dpid与端口号，用于实现nat转换与ip分配功能# 
-'''
+
